--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,6 +12,8 @@
     "jsxImportSource": "hono/jsx",
     "declaration": true,
     "emitDeclarationOnly": true,
-    "allowImportingTsExtensions": true
+    "allowImportingTsExtensions": true,
+    "outDir": "./dist",
+    "exclude": ["node_modules"]
   }
 }
