chore(ci): Fixed Unknown Compiler Option exclude in tsconfig.json

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,7 +13,9 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "allowImportingTsExtensions": true,
-    "outDir": "./dist",
-    "exclude": ["node_modules"]
-  }
+    "outDir": "./dist"
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
