--- a/backend/package.json
+++ b/backend/package.json
@@ -2,17 +2,22 @@
   "name": "backend",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc"
+    "dev": "dotenvx run --quiet -- tsx watch src/index.ts",
+    "build": "dotenvx run --quiet -- tsc",
+    "prisma:generate": "prisma generate",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.39.0",
     "@hono/node-server": "^1.14.0",
     "@hono/zod-validator": "^0.4.3",
+    "@prisma/client": "6.5.0",
     "hono": "^4.7.5",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
+    "prisma": "^6.5.0",
     "tsx": "^4.7.1"
   }
 }
