--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,9 +13,18 @@
     "declaration": true,
     "emitDeclarationOnly": true,
     "allowImportingTsExtensions": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"],
+      "@/prisma/*": ["prisma/*"]
+    },
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "resolveJsonModule": true
   },
   "exclude": [
     "node_modules"
-  ]
+  ],
+
 }
