--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,12 +4,13 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite --host",
-    "build": "vite build",
+    "dev": "dotenvx run --quiet -- vite --host",
+    "build": "dotenvx run --quiet -- vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "dotenvx run --quiet -- vite preview"
   },
   "dependencies": {
+    "@dotenvx/dotenvx": "^1.39.0",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-alert-dialog": "^1.1.6",
