ci(backend): Fixed Option 'moduleResolution' must be set to 'NodeNext'

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -19,7 +19,7 @@
       "@/*": ["src/*"],
       "@/prisma/*": ["prisma/*"]
     },
-    "moduleResolution": "Node",
+    "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
