--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -40,6 +40,16 @@ jobs:
         run: pnpm install
         working-directory: backend
 
+      - name: Create .env file
+        uses: ozaytsev86/create-env-file@v2.0.0
+        with:
+          ENV_DATABASE_URL: ${{ secrets.DATABASE_URL }}
+        working-directory: backend
+
+      - name: Generate Prisma Client
+        run: pnpm run prisma:generate
+        working-directory: backend
+
       - name: Build Project
         run: pnpm run build
         working-directory: backend
