chore(ci): Added prisma to onlyBuiltDependencies

--- a/package.json
+++ b/package.json
@@ -37,7 +37,10 @@
   "pnpm": {
     "ignoredBuiltDependencies": [],
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "prisma",
+      "@prisma/engines",
+      "@prisma/client"
     ]
   }
 }
