--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,15 +16,19 @@
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"],
-      "@/prisma/*": ["prisma/*"]
+      "@/*": ["./src/*"],
+      "@/prisma/*": ["./prisma/*"]
     },
     "moduleResolution": "NodeNext",
     "esModuleInterop": true,
     "resolveJsonModule": true
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "dist"
   ],
-
+  "include": [
+    "src",
+    "prisma"
+  ]
 }
