--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -21,14 +21,15 @@
     },
     "moduleResolution": "NodeNext",
     "esModuleInterop": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "forceConsistentCasingInFileNames": true
   },
   "exclude": [
     "node_modules",
     "dist"
   ],
   "include": [
-    "src",
-    "prisma"
+    "src/**/*",
+    "prisma/**/*"
   ]
 }
