--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "frontend",
     "backend"
   ],
+  "scripts": {
+    "dev": "pnpm --filter frontend run dev & pnpm --filter backend run dev",
+    "dev:frontend": "pnpm --filter frontend run dev",
+    "dev:backend": "pnpm --filter backend run dev"
+  },
   "keywords": [],
   "authors": [
     {
@@ -42,6 +47,7 @@
       "@types/react": "^19.0.0",
       "@types/react-dom": "^19.0.0",
       "@radix-ui/react-dialog": "^1.1",
+      "vite": "npm:rolldown-vite@latest",
       "cmdk": "^1.0"
     },
     "ignoredBuiltDependencies": [],
