feat(frontend): Added Axios Instance with Auth
feat(backend): Added Context Type of AppEnv support

feat(backend): Added User Modal

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,4 +3,4 @@
 # Please copy this file and rename it to ".env" before making changes.
 
 # API URL
-API_URL="http://localhost:3000"
+VITE_API_URL="http://localhost:3000"
