--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,7 @@
   "scripts": {
     "dev": "dotenvx run --quiet -- tsx watch src --exclude src/types/**/*",
     "build": "dotenvx run --quiet -- tsc",
+    "start": "node dist/index.js",
     "prisma:generate": "prisma generate",
     "prisma:init": "prisma migrate dev --name init",
     "prisma:migrate": "prisma migrate dev ",
